# kmhelpers

./: .gitignore  404.html  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  add_benchmark_entry.py  compare_query_results.py  compare_sizes.py  compress_index.py  compression_metrics.py  compressor.py  conftest.py  index.html  index.py  kmhelpers.py  kmhelpers_cmd.sh  kmhelpersctl.sh  mkdocs.yml  objects.inv  pyproject.toml  query_index.py  reorder_index.py  run_test_pipeline.py  setup.py  test_index.py  test_pipeline.py  test_scripts.py
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml  feature_request.yml
.github/workflows/: docs.yml  draft-pdf.yml  release.yml  tests.yml
0.6.3/: 404.html  index.html  objects.inv
0.6.3/api/: index.html
0.6.3/changelog/: index.html
0.6.3/commands/: index.html
0.6.3/contributing/: index.html
0.6.3/diagrams/: pipeline_diagram_v2.drawio
0.6.3/getting-started/: index.html
0.6.3/installation/: index.html
0.6.3/search/: search_index.json
api/: index.html
changelog/: index.html
commands/: index.html
commands/apply/: index.html
commands/compose/: index.html
commands/compress/: index.html
commands/count-kmers/: index.html
commands/design/: index.html
commands/fof/: index.html
commands/kmindex/: index.html
commands/list/: index.html
commands/lpc/: index.html
commands/pipeline/: index.html
commands/plan/: index.html
commands/profile/: index.html
commands/query/: index.html
commands/registry/: index.html
conda/: build_kmindex.yml  build_kmindex_linux.yml  build_kmindex_osx-64.yml  build_kmindex_osx-arm64.yml  environment.yml
contributing/: index.html
contributing/dev/: index.html
contributing/docs/: index.html
diagrams/: pipeline_diagram_v1.drawio
docs/: MIGRATION.md  getting-started.md  index.md  installation.md  tuto.md
docs/api/: index.md
docs/commands/: apply.md  build.md  compose.md  compress.md  count-kmers.md  design.md  fof.md  index.md  kmindex.md  list.md  lpc.md  manage.md  pipeline.md  plan.md  profile.md  query.md  registry.md
docs/contributing/: dev.md  docs.md  index.md
docs/diagrams/: pipeline_metro.drawio
docs/getting-started/: getting-started.md  index.md  installation.md
docs/tutorials/: ecoli.md  ecoli_appendice.md  ecoli_steps.md
examples/: basic_usage.py  browsing_registry.py  compress_selection.py  create_registry.py  index_fake_samples.py  pipeline_api.py  pipeline_cli.sh  run_examples.sh
examples/data/: .gitignore  SYNTHETIC_ROD_10.tar
getting-started/: index.html
installation/: index.html
kmhelpers/: __init__.py
kmhelpers/cli/: compress_index.py  kmhelpers.py  query_index.py  register_directory.py  register_index.py
kmhelpers/core/: __init__.py  index.py  utils.py  wrapper.py
kmhelpers/metrics/: __init__.py  compression_metrics.py
kmhelpers/operations/: __init__.py  builder.py  byte.py  compressor.py  fasta.py  fof.py  fof_validation.py  query.py  sequence.py
kmhelpers/tests/: __init__.py  test_imports.py  test_index.py
latest/: 404.html  index.html
latest/api/: index.html
latest/changelog/: index.html
latest/commands/: index.html
latest/contributing/: index.html
latest/getting-started/: index.html
latest/installation/: index.html
paper/: paper.bib  paper.md
paper/figures/: pipeline_metro.drawio
pykmhelpers/: __init__.py  _commit.py  _version.py
pykmhelpers/benchmark/: benchmark.py  diskbench.py  fiobench.py
pykmhelpers/cli/: __init__.py  about.py  apply.py  build.py  build_subindex.py  compose.py  compress.py  compression.py  count_kmers.py  design.py  exp_compression.py  experimental.py  fof.py  init.py  kmhelpers.py  kmindex.py  list.py  lpc.py  merge_def_files.py  merge_span.py  pipeline.py  plan.py  profile.py  project.py  project_shell.py  query.py  registry.py  shared.py  test.py
pykmhelpers/core/: __init__.py  bloom_filter.py  build_params.py  byte.py  cache.py  constants.py  fasta.py  (+12 more)
recipe/: meta.yaml
scripts/: collect_versions.sh  freeze_commit.py  setup.sh
search/: search_index.json
tools/: bash_kmhelpers.sh  install_kmindex_without_server.sh  register_directory.py
tuto/: index.html
(+124 files in other folders)
